--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -57,14 +57,16 @@ loops.everyInterval(24000, function () {
     milesD += 1;
     miles2LM -= 1;
     if (milesD = 102) {
-      if (confirm("You_Have_Reached_Kanses_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_The_Kanses_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/KansesRiverCrossing.image");
       }
       sessionStorage.setItem("milesLM", 82);
       sessionStorage.setItem("milesD", milesD + 1);
-      window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/KansesRiverCrossing");
-    } else if (milesD = ) {
-      
+      window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
+    } else if (milesD = 185) {
+      if (confirm("You_Have_Reached_The_Big_Blue_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
+      window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/images/BigBlueRiverCrossing.image");
+      }
     }
   }
   if (Wheather = "cold" && Clothing < 5) {
