--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -67,6 +67,9 @@ loops.everyInterval(24000, function () {
       if (confirm("You_Have_Reached_The_Big_Blue_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/images/BigBlueRiverCrossing.image");
       }
+      sessionStorage.setItem("milesLM", );
+      sessionStorage.setItem("milesD", milesD + 1);
+      window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
     }
   }
   if (Wheather = "cold" && Clothing < 5) {
