--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -67,9 +67,13 @@ loops.everyInterval(24000, function () {
       if (confirm("You_Have_Reached_The_Big_Blue_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/images/BigBlueRiverCrossing.image");
       }
-      sessionStorage.setItem("milesLM", );
+      sessionStorage.setItem("milesLM", 118);
       sessionStorage.setItem("milesD", milesD + 1);
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
+    } else if(milesD = 304) {
+      if (confirm("You_Have_Reached_Fort_Kerny.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/images/FortKerny.image");
+      }
     }
   }
   if (Wheather = "cold" && Clothing < 5) {
