--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -70,9 +70,15 @@ loops.everyInterval(24000, function () {
       sessionStorage.setItem("milesLM", 118);
       sessionStorage.setItem("milesD", milesD + 1);
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
-    } else if(milesD = 304) {
+    } else if (milesD = 304) {
       if (confirm("You_Have_Reached_Fort_Kerny.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/FortKerny.image");
+      }
+      var milesLM = 250;
+      milesD += 1;
+    } else if (milesD = 554) {
+      if (confirm("You_Have_Reached_Chimeny_Rock.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/ChimenyRock.image");
       }
     }
   }
