--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -75,11 +75,11 @@ loops.everyInterval(24000, function () {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/FortKerny.image");
       }
       var milesLM = 250;
-      milesD += 1;
     } else if (milesD = 554) {
       if (confirm("You_Have_Reached_Chimeny_Rock.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/ChimenyRock.image");
       }
+      var milesLM = ;
     }
   }
   if (Wheather = "cold" && Clothing < 5) {
