--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -79,7 +79,29 @@ loops.everyInterval(24000, function () {
       if (confirm("You_Have_Reached_Chimeny_Rock.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/ChimenyRock.image");
       }
-      var milesLM = ;
+      var milesLM = 86;
+    } else if (milesD = 640) {
+      if (confirm("You_Have_Reached_Fort_Laramie.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/FortLaramie.image");
+      }
+      var milesLM = 190;
+    } else if (milesD = 630) {
+      if (confirm("You_Have_Reached_Independance_Rock.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/IndependanceRock.image");
+      }
+      var milesLM = 120;
+    } else if (milesD = 932) {
+      if (confirm("You_Have_Reached_The_South_Pass.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/SouthPass.image");
+      }
+      var milesLM = 57;
+    } else if (milesD = 989) {
+      if (confirm("You_Have_Reached_The_Green_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/GreenRiverCrossing");
+      }
+      sessionStorage.setItem("milesD", milesD + 1);
+      sessionStorage.setItem("milesLM", 143);
+      window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
     }
   }
   if (Wheather = "cold" && Clothing < 5) {
