--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -97,7 +97,7 @@ loops.everyInterval(24000, function () {
       var milesLM = 57;
     } else if (milesD = 989) {
       if (confirm("You_Have_Reached_The_Green_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
-        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/GreenRiverCrossing");
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/GreenRiverCrossing.image");
       }
       sessionStorage.setItem("milesD", milesD + 1);
       sessionStorage.setItem("milesLM", 143);
