--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -62,6 +62,7 @@ loops.everyInterval(24000, function () {
       }
       sessionStorage.setItem("milesLM", 82);
       sessionStorage.setItem("milesD", milesD + 1);
+      sessionStorage.setItem("River", "Kanses");
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
     } else if (milesD = 185) {
       if (confirm("You_Have_Reached_The_Big_Blue_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
@@ -69,6 +70,7 @@ loops.everyInterval(24000, function () {
       }
       sessionStorage.setItem("milesLM", 118);
       sessionStorage.setItem("milesD", milesD + 1);
+      sessionStorage.setItem("River", "BigBlue");
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
     } else if (milesD = 304) {
       if (confirm("You_Have_Reached_Fort_Kerny.-Would_You_Like_To_Take_A_Gandure?")) {
@@ -101,6 +103,7 @@ loops.everyInterval(24000, function () {
       }
       sessionStorage.setItem("milesD", milesD + 1);
       sessionStorage.setItem("milesLM", 143);
+      sessionStorage.setItem("River", "Green");
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
     }
   }
