--- a/Gregames/OregonTrail/Images/KansesRiverCrossing.html
+++ b/Gregames/OregonTrail/Images/KansesRiverCrossing.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><body>
+<title>Student On Task - Please Be On Task</title>
 <img src="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/KansesRiverCrossingImage.png" alt="None" width="1366" height="618">
 Press"Space"To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing"><button>Space</button></a>
 </body></html><script>
