--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -57,54 +57,76 @@ loops.everyInterval(24000, function () {
     milesD += 1;
     miles2LM -= 1;
     if (milesD = 102) {
-      if (confirm("You_Have_Reached_The_Kanses_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
-        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/KansesRiverCrossing.image");
-      }
       sessionStorage.setItem("milesLM", 82);
       sessionStorage.setItem("milesD", milesD + 1);
       sessionStorage.setItem("River", "Kanses");
+      if (confirm("You_Have_Reached_The_Kanses_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/KansesRiverCrossing");
+      }
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
     } else if (milesD = 185) {
-      if (confirm("You_Have_Reached_The_Big_Blue_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
-      window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/BigBlueRiverCrossing.image");
-      }
       sessionStorage.setItem("milesLM", 118);
       sessionStorage.setItem("milesD", milesD + 1);
       sessionStorage.setItem("River", "BigBlue");
+      if (confirm("You_Have_Reached_The_Big_Blue_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
+      window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/BigBlueRiverCrossing.image");
+      }
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
     } else if (milesD = 304) {
+      sessionStorage.setItem("milesLM", 251);
+      var milesLM = 250;
+      sessionStorage.setItem("milesD", milesD + 1);
       if (confirm("You_Have_Reached_Fort_Kerny.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/FortKerny.image");
       }
-      var milesLM = 250;
     } else if (milesD = 554) {
+      var milesLM = 86;
+      sessionStorage.setItem("milesLM", 87);
+      sessionStorage.setItem("milesD", milesD + 1);
       if (confirm("You_Have_Reached_Chimeny_Rock.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/ChimenyRock.image");
       }
-      var milesLM = 86;
     } else if (milesD = 640) {
+      var milesLM = 190;
+      sessionStorage.setItem("milesLM", 191);
+      sessionStorage.setItem("milesD", milesD + 1);
       if (confirm("You_Have_Reached_Fort_Laramie.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/FortLaramie.image");
       }
-      var milesLM = 190;
     } else if (milesD = 630) {
+      var milesLM = 120;
+      sessionStorage.setItem("milesLM", 121);
+      sessionStorage.setItem("milesD", milesD + 1);
       if (confirm("You_Have_Reached_Independance_Rock.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/IndependanceRock.image");
       }
-      var milesLM = 120;
     } else if (milesD = 932) {
       if (confirm("You_Have_Reached_The_South_Pass.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/SouthPass.image");
       }
       var milesLM = 57;
     } else if (milesD = 989) {
-      if (confirm("You_Have_Reached_The_Green_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
-        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/GreenRiverCrossing.image");
-      }
       sessionStorage.setItem("milesD", milesD + 1);
       sessionStorage.setItem("milesLM", 143);
       sessionStorage.setItem("River", "Green");
+      if (confirm("You_Have_Reached_The_Green_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/GreenRiverCrossing");
+      }
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
+    } else if (milesD = 1133) {
+      var milesLM = 57;
+      sessionStorage.setItem("milesLM", 58);
+      sessionStorage.setItem("milesD", milesD + 1);
+      if (confirm("You_Have_Reached_Soda_Springs.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/SodaSprings");
+      }
+    } else if (milesD = 1190) {
+      var milesLM = ;
+      sessionStorage.setItem("milesLM", );
+      sessionStorage.setItem("milesD", milesD + 1);
+      if (confirm("You_Have_Reached_Fort_Hall.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/FortHall");
+      }
     }
   }
   if (Wheather = "cold" && Clothing < 5) {
