--- a/Gregames/OregonTrail/RiverCrossing.html
+++ b/Gregames/OregonTrail/RiverCrossing.html
@@ -50,20 +50,27 @@ var Pace = sessionStorage.getItem("Pace");
 var hr = sessionStorage.getItem("hr");
 var Rations = sessionStorage.getItem("Rations");
 var FPD = sessionStorage.getItem("FPD");
-if (Wheather = "hot") {
-  var Depth = 2;
-} else if (Wheather = "warm") {
-  var Depth = 3;
-} else if (Wheather = "cool") {
-  var Depth = 2.5;
-} else if (Wheather = "cold") {
-  var Depth = 2;
-} else if (Wheather = "very-cold") {
-  var Depth = 1.5;
-} else if (Wheather = "rainy") {
+if (sessionStorage.getItem("River") = "Kanses") {
   var Depth = 3.5;
+} else if (sessionStorage.getItem("River") = "BigBlue") {
+  var Depth = 2.2;
+} else if (sessionStorage.getItem("River") = "Green") {
+  var Depth = 5;
+}
+if (Wheather = "hot") {
+  Depth = 2;
+} else if (Wheather = "warm") {
+  Depth = 3;
+} else if (Wheather = "cool") {
+  Depth = 2.5;
+} else if (Wheather = "cold") {
+  Depth = 2;
+} else if (Wheather = "very-cold") {
+  Depth = 1.5;
+} else if (Wheather = "rainy") {
+  Depth = 3.5;
 } else if (Wheather = "snowy") {
-  var Depth = 1;
+  Depth = 1;
 }
 documant.getElementById('Depth').innerHTML = Depth
 function Day() {
