--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -73,7 +73,7 @@ loops.everyInterval(24000, function () {
       }
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
     } else if (milesD = 304) {
-      sessionStorage.setItem("milesLM", 251);
+      sessionStorage.setItem("milesLM", 249);
       var milesLM = 250;
       sessionStorage.setItem("milesD", milesD + 1);
       if (confirm("You_Have_Reached_Fort_Kerny.-Would_You_Like_To_Take_A_Gandure?")) {
@@ -81,30 +81,32 @@ loops.everyInterval(24000, function () {
       }
     } else if (milesD = 554) {
       var milesLM = 86;
-      sessionStorage.setItem("milesLM", 87);
+      sessionStorage.setItem("milesLM", 85);
       sessionStorage.setItem("milesD", milesD + 1);
       if (confirm("You_Have_Reached_Chimeny_Rock.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/ChimenyRock.image");
       }
     } else if (milesD = 640) {
       var milesLM = 190;
-      sessionStorage.setItem("milesLM", 191);
+      sessionStorage.setItem("milesLM", 189);
       sessionStorage.setItem("milesD", milesD + 1);
       if (confirm("You_Have_Reached_Fort_Laramie.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/FortLaramie.image");
       }
     } else if (milesD = 630) {
       var milesLM = 120;
-      sessionStorage.setItem("milesLM", 121);
+      sessionStorage.setItem("milesLM", 119);
       sessionStorage.setItem("milesD", milesD + 1);
       if (confirm("You_Have_Reached_Independance_Rock.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/IndependanceRock.image");
       }
     } else if (milesD = 932) {
+      var milesLM = 57;
+      sessionStorage.setItem("milesLM", 56);
+      sessionStorage.setItem("milesD" milesD + 1);
       if (confirm("You_Have_Reached_The_South_Pass.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/SouthPass.image");
       }
-      var milesLM = 57;
     } else if (milesD = 989) {
       sessionStorage.setItem("milesD", milesD + 1);
       sessionStorage.setItem("milesLM", 143);
@@ -115,17 +117,24 @@ loops.everyInterval(24000, function () {
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
     } else if (milesD = 1133) {
       var milesLM = 57;
-      sessionStorage.setItem("milesLM", 58);
+      sessionStorage.setItem("milesLM", 56);
       sessionStorage.setItem("milesD", milesD + 1);
       if (confirm("You_Have_Reached_Soda_Springs.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/SodaSprings");
       }
     } else if (milesD = 1190) {
-      var milesLM = ;
-      sessionStorage.setItem("milesLM", );
+      var milesLM = 182;
+      sessionStorage.setItem("milesLM", 181);
       sessionStorage.setItem("milesD", milesD + 1);
       if (confirm("You_Have_Reached_Fort_Hall.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/FortHall");
+      }
+    } else if (milesD = ) {
+      sessionStorage.setItem("milesLM", );
+      sessionStorage.setItem("milesD", milesD + 1);
+      sessionStorage.setItem("River", "Snake");
+      if (confirm("You_Have_Reached_The_Snake_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/SnakeRiverCrossing");
       }
     }
   }
