--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -129,12 +129,19 @@ loops.everyInterval(24000, function () {
       if (confirm("You_Have_Reached_Fort_Hall.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/FortHall");
       }
-    } else if (milesD = ) {
-      sessionStorage.setItem("milesLM", );
+    } else if (milesD = 1372) {
+      sessionStorage.setItem("milesLM", 113);
       sessionStorage.setItem("milesD", milesD + 1);
       sessionStorage.setItem("River", "Snake");
       if (confirm("You_Have_Reached_The_Snake_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/SnakeRiverCrossing");
+      }
+    } else if (milesD = ) {
+      sessionStorage.setItem("milesLM", );
+      var milesLM = ;
+      sessionStorage.setItem("milesD", milesD + 1);
+      if (confirm("You_Have_Reached_Fort_Boise.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/FortBoise");
       }
     }
   }
