--- a/Gregames/OregonTrail/RiverCrossing.html
+++ b/Gregames/OregonTrail/RiverCrossing.html
@@ -482,10 +482,11 @@ function Ford() {
   window.location.assign("https://0038509gd.github.io/Greg.com/Gregame/OregonTrail");
 }
 function IndianGuide() {
-  if (sessionStorage.getItem("milesD") = ) {
+  if (sessionStorage.getItem("River") = "Snake") {
     if (confirm("An_Indian_Has_Agreed_To_Guide_Your_Wagon_Across_The_River_For_3_Sets_Of_Clothing.-Do_You_Accept?")) {
-      Clothing -= 1;
+      Clothing -= 3;
       Maintain();
+      window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail");
     }
   } else {
     alert("There_Are_No_Indians_Neerby");
