--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -60,7 +60,7 @@ loops.everyInterval(24000, function () {
       sessionStorage.setItem("milesLM", 82);
       sessionStorage.setItem("milesD", milesD + 1);
       sessionStorage.setItem("River", "Kanses");
-      if (confirm("You_Have_Reached_The_Kanses_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_The_Kanses_River_Crossing.-Would_You_Like_To_Take_A_Gander?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/KansesRiverCrossing");
       }
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
@@ -68,7 +68,7 @@ loops.everyInterval(24000, function () {
       sessionStorage.setItem("milesLM", 118);
       sessionStorage.setItem("milesD", milesD + 1);
       sessionStorage.setItem("River", "BigBlue");
-      if (confirm("You_Have_Reached_The_Big_Blue_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_The_Big_Blue_River_Crossing.-Would_You_Like_To_Take_A_Gander?")) {
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/BigBlueRiverCrossing.image");
       }
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
@@ -76,42 +76,42 @@ loops.everyInterval(24000, function () {
       sessionStorage.setItem("milesLM", 249);
       var milesLM = 250;
       sessionStorage.setItem("milesD", milesD + 1);
-      if (confirm("You_Have_Reached_Fort_Kerny.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_Fort_Kerny.-Would_You_Like_To_Take_A_Gander?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/FortKerny.image");
       }
     } else if (milesD = 554) {
       var milesLM = 86;
       sessionStorage.setItem("milesLM", 85);
       sessionStorage.setItem("milesD", milesD + 1);
-      if (confirm("You_Have_Reached_Chimeny_Rock.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_Chimeny_Rock.-Would_You_Like_To_Take_A_Gander?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/ChimenyRock.image");
       }
     } else if (milesD = 640) {
       var milesLM = 190;
       sessionStorage.setItem("milesLM", 189);
       sessionStorage.setItem("milesD", milesD + 1);
-      if (confirm("You_Have_Reached_Fort_Laramie.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_Fort_Laramie.-Would_You_Like_To_Take_A_Gander?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/FortLaramie.image");
       }
     } else if (milesD = 630) {
       var milesLM = 120;
       sessionStorage.setItem("milesLM", 119);
       sessionStorage.setItem("milesD", milesD + 1);
-      if (confirm("You_Have_Reached_Independance_Rock.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_Independance_Rock.-Would_You_Like_To_Take_A_Gander?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/IndependanceRock.image");
       }
     } else if (milesD = 932) {
       var milesLM = 57;
       sessionStorage.setItem("milesLM", 56);
       sessionStorage.setItem("milesD" milesD + 1);
-      if (confirm("You_Have_Reached_The_South_Pass.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_The_South_Pass.-Would_You_Like_To_Take_A_Gander?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/SouthPass.image");
       }
     } else if (milesD = 989) {
       sessionStorage.setItem("milesD", milesD + 1);
       sessionStorage.setItem("milesLM", 143);
       sessionStorage.setItem("River", "Green");
-      if (confirm("You_Have_Reached_The_Green_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_The_Green_River_Crossing.-Would_You_Like_To_Take_A_Gander?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/GreenRiverCrossing");
       }
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/RiverCrossing");
@@ -119,30 +119,49 @@ loops.everyInterval(24000, function () {
       var milesLM = 57;
       sessionStorage.setItem("milesLM", 56);
       sessionStorage.setItem("milesD", milesD + 1);
-      if (confirm("You_Have_Reached_Soda_Springs.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_Soda_Springs.-Would_You_Like_To_Take_A_Gander?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/SodaSprings");
       }
     } else if (milesD = 1190) {
       var milesLM = 182;
       sessionStorage.setItem("milesLM", 181);
       sessionStorage.setItem("milesD", milesD + 1);
-      if (confirm("You_Have_Reached_Fort_Hall.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_Fort_Hall.-Would_You_Like_To_Take_A_Gander?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/FortHall");
       }
     } else if (milesD = 1372) {
       sessionStorage.setItem("milesLM", 113);
       sessionStorage.setItem("milesD", milesD + 1);
       sessionStorage.setItem("River", "Snake");
-      if (confirm("You_Have_Reached_The_Snake_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_The_Snake_River_Crossing.-Would_You_Like_To_Take_A_Gander?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/SnakeRiverCrossing");
       }
-    } else if (milesD = ) {
-      sessionStorage.setItem("milesLM", );
-      var milesLM = ;
+    } else if (milesD = 1486) {
+      sessionStorage.setItem("milesLM", 159);
+      var milesLM = 160;
       sessionStorage.setItem("milesD", milesD + 1);
-      if (confirm("You_Have_Reached_Fort_Boise.-Would_You_Like_To_Take_A_Gandure?")) {
+      if (confirm("You_Have_Reached_Fort_Boise.-Would_You_Like_To_Take_A_Gander?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/FortBoise");
       }
+    } else if (milesD = 1646) {
+      sessionStorage.setItem("milesLM", 54);
+      var milesLM = 55;
+      sessionStorage.setItem("milesD", milesD + 1);
+      if (confirm("You_Have_Reached_The_Blue_Mountians.-Would_You_Like_To_Take_A_Gander?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Image/BlueMauntians");
+      }
+    } else if (milesD = 1701) {
+      sessionStorage.setItem("milesLM", 119);
+      var milesLM = 120;
+      sessionStorage.setItem("milesD", milesD + 1);
+      if (confirm("You_Have_Reached_Fort_Walla_Walla.-Would_You_Like_To_Take_A_Gander?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/FortWallaWalla");
+      }
+    } else if (milesD = 1821) {
+      if (confirm("You_Have_Reached_The_Dalles.-Would_You_Like_To_Take_A_Gander?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/Dalles");
+      }
+      window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/ColumbiaRiver");
     }
   }
   if (Wheather = "cold" && Clothing < 5) {
