--- a/Gregames/OregonTrail/ColumbiaRiver.html
+++ b/Gregames/OregonTrail/ColumbiaRiver.html
@@ -85,7 +85,7 @@ if (confirm("Congaradulations!-You_Made_It_To_The_Columbia_River!-Now_Lets_See_I
 var myGamePiece;
 
 function startGame() {
-    myGamePiece = new component(30, 30, "smiley.gif", 10, 120, "image");
+    myGamePiece = new component(30, 30, "https://0038509.github.io/Greg.com/Gregames/OregonTrail/Images/wagon.png", 10, 120, "image");
     myGameArea.start();
 }
 
