--- a/Gregames/OregonTrail/RiverCrossing.html
+++ b/Gregames/OregonTrail/RiverCrossing.html
@@ -94,16 +94,12 @@ function Day() {
   if (Day == "28") {
     if (Month == 2) {
       var Day = 1;
-      localStorage.setItem("Day", 1);
       Month += 1;
-      localStorage.setItem("Month", Month);
     }
   } else if (Day == 30) {
     if ((Month == 4||Month == 6)||(Month == 9||Month == 11)) {
       var Day = 1;
-      localStorage.setItem("Day", 1);
       Month += 1;
-      localStorage.setItem("Month", Month);
     } 
   } else if (Day == 31) {
     if ((Month == 1||Month == 3)||((Momth == 5||Month == 7)||(Month == 8||Month == 10))) {
@@ -207,7 +203,6 @@ function Day() {
                       if (Wsick) {
                         if (Wdied) {
                           if (Isick) {
-                            localStorage.setItem("Idied", true);
                             window.location.assing("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/YourDead");
                           } else {
                             var Randomizer = randint(1, );
@@ -299,7 +294,6 @@ function Day() {
                       if (Wsick) {
                         if (Wdied) {
                           if (Isick) {
-                            localStorage.setItem("Idied", true);
                             window.location.assing("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/YourDead");
                           } else {
                             var Randomizer = randint(1, );
@@ -385,36 +379,36 @@ function Day() {
   }
 }
 function Maintain() {
-  localStorage.setItem("Idied", Idied);
-  localStorage.setItem("Isick", Isick);
-  localStorage.setItem("Wdied", Wdied);
-  localStorage.setItem("Wsick", Wsick);
-  localStorage.setItem("K1died", K1died);
-  localStorage.setItem("K1sick", K1sick);
-  localStorage.setItem("K2died", K2died);
-  localStorage.setItem("K2sick", K2sick);
-  localStorage.setItem("K3died", K3died);
-  localStorage.setItem("K3sick", K3sick);
-  localStorage.setItem("Oxen", Oxen);
-  localStorage.setItem("Foodlb", Foodlb);
+  sessionStorage.setItem("Idied", Idied);
+  sessionStorage.setItem("Isick", Isick);
+  sessionStorage.setItem("Wdied", Wdied);
+  sessionStorage.setItem("Wsick", Wsick);
+  sessionStorage.setItem("K1died", K1died);
+  sessionStorage.setItem("K1sick", K1sick);
+  sessionStorage.setItem("K2died", K2died);
+  sessionStorage.setItem("K2sick", K2sick);
+  sessionStorage.setItem("K3died", K3died);
+  sessionStorage.setItem("K3sick", K3sick);
+  sessionStorage.setItem("Oxen", Oxen);
+  sessionStorage.setItem("Foodlb", Foodlb);
   document.getElementById('Foodlb').innerHTML = "Food:" + Foodlb + "pounds";
-  localStorage.setItem("Clothing", Clothing);
-  localStorage.setItem("Ammo", Ammo);
-  localStorage.setItem("Axels", Axels);
-  localStorage.setItem("Toungues", Toungues);
-  localStorage.setItem("Wheels", Wheels);
-  localStorage.setItem("Day", Day);
-  localStorage.setItem("Month", Month);
-  localStorage.setItem("Year", Year);
+  sessionStorage.setItem("Clothing", Clothing);
+  sessionStorage.setItem("Ammo", Ammo);
+  sessionStorage.setItem("Axels", Axels);
+  sessionStorage.setItem("Toungues", Toungues);
+  sessionStorage.setItem("Wheels", Wheels);
+  sessionStorage.setItem("Day", Day);
+  sessionStorage.setItem("Month", Month);
+  sessionStorage.setItem("Year", Year);
   document.getElementById('Date').innerHTML = "Date:" + Day + "th_Of_" + Month + "_in_" + Year;
-  localStorage.setItem("Wheather", Wheather);
+  sessionStorage.setItem("Wheather", Wheather);
   document.getElementById('Wheather').innerHTML = "Wheather:" + Wheather;
-  localStorage.setItem("Health", Health);
+  sessionStorage.setItem("Health", Health);
   document.getElementById('Health').innerHTML = "Health:" + Health;
-  localStorage.setItem("HealthNum", HealthNum);
-  localStorage.setItem("miles2LM", miles2LM);
+  sessionStorage.setItem("HealthNum", HealthNum);
+  sessionStorage.setItem("miles2LM", miles2LM);
   document.getElementById('miles2LM').innerHTML = "Next_Landmark" + miles2LM + "miles";
-  localStorage.setItem("milesD", milesD);
+  sessionStorage.setItem("milesD", milesD);
   document.getElementById('milesD').innerHTML = "Miles_Traveled:" + milesD + "miles";
 }
 function Fairy() {
