--- a/Gregames/OregonTrail/Segment-Action-Menu.html
+++ b/Gregames/OregonTrail/Segment-Action-Menu.html
@@ -55,7 +55,7 @@ var Pace = sessionStorage.getItem("Pace");
 var hr = sessionStorage.getItem("hr");
 var Rations = sessionStorage.getItem("Rations");
 var FPD = sessionStorage.getItem("FPD");
-if (milesD = 304) {
+if (((milesD = 0||(milesD = 305||milesD = 641))||((milesD = 1190||milesD = 1487)||milesD = 1702))) {
  document.getElementById('lm').innerHTML = "Buy_Supplies";
 } else {
  document.getElementById('lm').innerHTML = "Hunt_For_Food(Comming_Soon!)";
@@ -194,7 +194,6 @@ function Run() {
                       if (Wsick) {
                         if (Wdied) {
                           if (Isick) {
-                            localStorage.setItem("Idied", true);
                             window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/YourDead");
                           } else {
                             var Randomizer = randint(1, );
@@ -286,7 +285,6 @@ function Run() {
                       if (Wsick) {
                         if (Wdied) {
                           if (Isick) {
-                            localStorage.setItem("Idied", true);
                             window.location.assing("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/YourDead");
                           } else {
                             var Randomizer = randint(1, );
@@ -419,7 +417,7 @@ function kill() {
   Maintain();
 }
 function difine() {
-  if (milesD = 0) {
+  if (((milesD = 0||(milesD = 305||milesD = 641))||((milesD = 1190||milesD = 1487)||milesD = 1702))) {
     window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Shop");
   } else {
     
