--- a/Gregames/OregonTrail/Segment-Month.html
+++ b/Gregames/OregonTrail/Segment-Month.html
@@ -65,6 +65,7 @@ sessionStorage.setItem("K2sick", false);
 sessionStorage.setItem("K2died", false);
 sessionStorage.setItem("K3sick", false);
 sessionStorage.setItem("K3died", false);
+sessionStorage.setItem("milesLM", 102);
 }
 </script></body2></body1></html><script>
   document.body.style.background = "black";
