--- a/Gregames/OregonTrail/Segment-Names.html
+++ b/Gregames/OregonTrail/Segment-Names.html
@@ -9,20 +9,20 @@ What_Are_The_First_Names_Of_The_Wagon_Leaders_3_Kids?<br>
 <input type="text" id="2" value="Gordy" onkeydown="kid2(event)"><br>
 <input type="text" id="3" Value="Derik" onkeydown="kid3(event)"><br>
 Are_These_Names_Correct?<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Jobs"><button type="button">Y</button></a><br><br>
-<p id="I">is your name</p>
-<p id="W">is your wifes name</p>
-<p id="K1">is kid 1s name</p>
-<p id="K2">is kid 2s name</p>
-<p id="K3">is kid 3s name</p>
+<p id="I">your name</p>
+<p id="W">your wifes name</p>
+<p id="K1">kid 1s name</p>
+<p id="K2">kid 2s name</p>
+<p id="K3">kid 3s name</p>
 <script>
 function you(event) {
   var I = document.getElementById("You").value;
-  sessionStorage.setItem("I", I)
+  sessionStorage.setItem("I", I);
   document.getElementById("I").innerHTML = I;
 }
 function wife(event) {
   var W = document.getElementById("Wife").value;
-  sessionStorage.setItem("W", W)
+  sessionStorage.setItem("W", W);
   document.getElementById("W").innerHTML = W;
 }
 function kid1(event) {
@@ -32,12 +32,12 @@ function kid1(event) {
 }
 function kid2(event) {
   var K2 = document.getElementById("2").value;
-  sessionStorage.setItem("K2", K2)
+  sessionStorage.setItem("K2", K2);
   document.getElementById("K2").innerHTML = K2;
 }
 function kid3(event) {
   var K3 = document.getElementById("3").value;
-  sessionStorage.setItem("K3", K3)
+  sessionStorage.setItem("K3", K3);
   document.getElementById("K3").innerHTML = K3;
 }
 </script></body2></body1><script>
